[project]
name = "app-entregas-turvo"
version = "0.1.0"
description = ""
authors = [
    {name = "Claudio Diporty",email = "claudio.dior@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
